Ultima Versión Caracterización 12 de Julio 2021

--- a/obautista/.vscode/settings.json
+++ b/obautista/.vscode/settings.json
@@ -11,7 +11,7 @@
                 "exclude": [
                     "tests/**"
                 ],
-                "deployOnSave": true
+                "deployOnSave": false
             }
         ],
 		"targets": [
